<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:id="@+id/cv_tvshow"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_poster_tvshow"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/deskripsi_tvshow"
            tools:src="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_judul_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/iv_poster_tvshow"
            android:layout_toRightOf="@id/iv_poster_tvshow"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/judul_tvshow" />

        <TextView
            android:id="@+id/tv_tanggal_rilis_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_judul_tvshow"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/iv_poster_tvshow"
            android:layout_toRightOf="@id/iv_poster_tvshow"
            android:maxLines="5"
            android:text="@string/tanggal_rilis_tvshow"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_deskripsi_tvshow"
            android:layout_width="195dp"
            android:layout_height="84dp"
            android:layout_below="@+id/tv_tanggal_rilis_tvshow"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/iv_poster_tvshow"
            android:layout_toRightOf="@id/iv_poster_tvshow"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/deskripsi_tvshow" />

    </RelativeLayout>

</android.support.v7.widget.CardView>